--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -1,73 +1,88 @@
-<div class="MenuBar">
-	<ul>
-		<div class="home">
-			<li class="">
-				<a href=""><h4>HOME</h4></a>
-			</li>
-			<span>
-				<li class=""><a href="">Slider Revolution</a></li>
-				<li class=""><a href="">Latest Updates</a></li>
-				<li class=""><a href="">Our Toppers</a></li>
-				<li class=""><a href="">Neet Achievements</a></li>
-				<li class=""><a href="">Students Testimonials</a></li>
-			</span>
-		</div>
-		<div class="courses">
-			<li class="">
-				<a href=""><h4>COURSES</h4></a>
-			</li>
-			<span>
-				<li class=""><a href="">Courses Neet</a></li>
-				<li class=""><a href="">Courses jee</a></li>
-				<li class=""><a href="">Courses iit & medical</a></li>
-			</span>
-		</div>
-		<div class="AboutUs">
-			<li class="">
-				<a href=""><h4>ABOUT US</h4></a>
-			</li>
-			<span>
-				<li class=""><a href="">History</a></li>
-				<li class=""><a href="">Our Leaders</a></li>
-			</span>
-		</div>
-		<div class="DemoVideos">
-			<li class="">
-				<a href=""><h4>DEMO VIDEOS</h4></a>
-			</li>
-			<span>
-				<li class=""><a href="">Videos</a></li>
-			</span>
-		</div>
-		<div class="SuccessStories">
-			<li class="">
-				<a href=""><h4>SUCCESS STORIES</h4></a>
-			</li>
-			<span>
-				<li class=""><a href="">Image</a></li>
-				<li class=""><a href="">Videos</a></li>
-			</span>
-		</div>
-		<div class="Results">
-			<li class="">
-				<a href=""><h4>RESULTS</h4></a>
-			</li>
-			<span>
-				<li class=""><a href="">Image</a></li>
-				<li class=""><a href="">Name</a></li>
-				<li class=""><a href="">Neet Scores</a></li>
-				<li class=""><a href="">Collage Group</a></li>
-			</span>
-		</div>
-		<div class="ContactUs">
-			<li class="">
-				<a href=""><h4>CONTACT US</h4></a>
-			</li>
-			<span>
-				<li class=""><a href="">Name</a></li>
-				<li class=""><a href="">Phone Number</a></li>
-				<li class=""><a href="">Message</a></li>
-			</span>
-		</div>
-	</ul>
-</div>
+<div class="flex-shrink-0 p-3 border-end bg-white" style="width: 200px; height: 90vh;">
+    <ul class="list-unstyled  ps-0">
+      <li class="mb-4">
+        <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
+          <b>Home</b>
+        </button>
+        <div class="collapse show" id="home-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
+            <li><a href="#" class="link-dark rounded">Slider Revolution</a></li>
+            <li><a href="#" class="link-dark rounded">Latest Updates</a></li>
+            <li><a href="#" class="link-dark rounded">Our Toppers</a></li>
+            <li><a href="#" class="link-dark rounded">Neet Achievements</a></li>
+            <li><a href="#" class="link-dark rounded">Students Testimonials</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="mb-4">
+        <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#courses-collapse" aria-expanded="false">
+          <b>Courses</b> 
+        </button>
+        <div class="collapse" id="courses-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
+            <li><a href="#" class="link-dark rounded">Courses-NEET</a></li>
+            <li><a href="#" class="link-dark rounded">Courses-JEE</a></li>
+            <li><a href="#" class="link-dark rounded">Courses-IIT & Medical</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="mb-4">
+        <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#about-collapse" aria-expanded="false">
+          <b>About Us</b> 
+        </button>
+        <div class="collapse" id="about-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
+            <li><a href="#" class="link-dark rounded">History</a></li>
+            <li><a href="#" class="link-dark rounded">Our Leaders</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="mb-4">
+        <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#demo-collapse" aria-expanded="false">
+          <b>Demo Videos</b> 
+        </button>
+        <div class="collapse" id="demo-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
+            <li><a href="#" class="link-dark rounded">Videos</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="mb-4">
+        <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#success-collapse" aria-expanded="false">
+          <b>Success Stories</b> 
+        </button>
+        <div class="collapse" id="success-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
+            <li><a href="#" class="link-dark rounded">Image</a></li>
+            <li><a href="#" class="link-dark rounded">Videos</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="mb-4">
+        <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#results-collapse" aria-expanded="false">
+          <b>Results</b> 
+        </button>
+        <div class="collapse" id="results-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
+            <li><a href="#" class="link-dark rounded">Image</a></li>
+            <li><a href="#" class="link-dark rounded">Name</a></li>
+            <li><a href="#" class="link-dark rounded">Neet Scores</a></li>
+            <li><a href="#" class="link-dark rounded">College Group</a></li>
+          </ul>
+        </div>
+      </li>
+      <li class="mb-4">
+        <button class="btn btn-toggle align-items-center rounded collapsed fs-5" data-bs-toggle="collapse" data-bs-target="#contact-collapse" aria-expanded="false">
+           <b>Contact Us</b> 
+        </button>
+        <div class="collapse" id="contact-collapse">
+          <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
+            <li><a href="#" class="link-dark rounded">Name</a></li>
+            <li><a href="#" class="link-dark rounded">Phone Number </a></li>
+            <li><a href="#" class="link-dark rounded">Message</a></li>
+          </ul>
+        </div>
+      </li>
+      
+    </ul>
+  </div>
