--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -1,15 +1,29 @@
 <!-- Header session -->
-<header>
-    <div class="Menu">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="white">
-            <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" />
-        </svg>
-        <h2>Menu</h2>
-        <h1>Classic Neet Academy Admin Dashboard</h1>
-        <img src="images/home/classic-nee-tacademy-logo.png" alt="" class="user">
-        <div>
-            <h2>superadmin</h2>
-            <p>signout</p>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid justify-content-space-between">
+      <a class="navbar-brand" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg>Menu</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active d-flex justify-content-center"" aria-current="page" href="#">Classic Neet Academy Admin Dashboard</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav justify-content-end">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Super Admin
+            </a>
+            <ul class="dropdown-menu justify-content-end" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Signout</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-</header>
+  </nav>
+
