--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -1,414 +1,78 @@
-.dashboard {
-	width: 100%;
-	height: 300vh;
-	display: flex;
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 .mainsection{
+	height: 90vh;
 	width: 100%;
-	height: 100vh;
+	display: flex;
+}
+
+.left{
 	position: relative;
-	display: flex;
 }
 
-/* Menubar */
+.right{
+	position: relative;
+	height: 90%;
+	width: 90%;
+	
+}
 
-.Homepage {
-	width: 100%;
-	height: auto;
-	overflow-y: auto;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.table{
+	border: 2px solid rgb(53, 49, 49);
+	border-radius: 2px;
+	width: 80%;
 }
-/* Sliderrevoluion */
-.sliderrevolution {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-	width: 100%;
-}
-.sliderrevolution h2 {
-	bottom: 80%;
+
+.currentSliderimgurl{
+	opacity: 0;
 	position: absolute;
-	left: 20%;
-}
-.grid1 {
-	position: absolute;
-	left: 43%;
-	top: 11%;
-	width: 35%;
-	height: 89vh;
-	display: grid;
-	grid-template-areas: 'cont1 cont2 cont3';
-	align-content: center;
-	justify-content: center;
-}
-.item1 {
-	grid-area: cont1;
-}
-.item2 {
-	grid-area: cont2;
-}
-.item3 {
-	grid-area: cont3;
-}
-.grid-item1 {
-	height: 64vh;
-	width: 23vw;
-	font-size: 20px;
-	display: flex;
-	justify-content: space-around;
-	flex-direction: column;
-	align-items: center;
-	box-shadow: 0px 0px 0px 2px;
-	color: #33ddff;
+	height: 0%;
+	width: 0%;
 }
 
-.popupimg {
-	position: fixed;
-	height: 80vh;
-	width: 80vw;
-	right: 50%;
-	transform: translateX(50%);
-	display: none;
-	z-index: 20px;
-}
-
-.popupimg img {
+.imgform{
 	height: 100%;
 	width: 100%;
-}
-
-.subbutton1 button {
-	width: 145px;
-	padding: 6px 0;
-	border-radius: 25px;
-	text-align: center;
-	font-weight: bold;
-	font-size: 25px;
-	border: 2px solid white;
-	background-color: white;
-	color: #0061ff;
-	display: flex;
-	position: absolute;
-	align-items: center;
-	justify-content: center;
-	right: 8%;
-	bottom: 2%;
-	display: none;
-}
-
-.btndisplay{
-	display: block !important;
-}
-
-/* Latest updates */
-.Latestupdates {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 70vh;
-	width: 45%;
 }
 
-.popupdiv{
+.sliderimgurl{
+	opacity: 0;
 	position: absolute;
-	height: 100vh;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: #000;
+	height: 0%;
+	width: 0%;
+}
+
+.preview{
+	position: absolute;
+	height: 80vh;
+	width: 80%;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-41%);
 	display: none;
 	z-index: 5;
-}
-
-.form{
-	position: relative;
 
 }
 
-.Latestupdates h2 {
-	position: relative;
-	left: 20%;
-}
-.grid2 {
-	position: relative;
-	left: 56%;
-	width: 60%;
-	height: 63vh;
-	display: grid;
-	grid-template-areas: 'cont1 cont2'
-						'cont3 cont3';
-	align-content: center;
-	justify-content: center;
-}
-
-.item1 {
-	grid-area: cont1;
-}
-.item2 {
-	grid-area: cont2;
-}
-.grid-item2 {
-	height: 64vh;
-	width: 30vw;
-	font-size: 20px;
-	display: flex;
-	justify-content: space-around;
-	flex-direction: column;
-	align-items: center;
-	box-shadow: 0px 0px 0px 2px;
-	color: #fff;
-}
-.subbutton2 button {
-	width: 145px;
-	padding: 6px 0;
-	border-radius: 25px;
-	text-align: center;
-	font-weight: bold;
-	font-size: 25px;
-	border: 2px solid white;
-	background-color: white;
-	color: #0061ff;
-	display: flex;
-	position: relative;
-	align-items: center;
-	justify-content: center;
-	left: 100%;
-    bottom: -51px;
-}
-
-
-/* Our Toppers */
-.OurToppers {
-	display: flex;
+.preview img{
 	justify-content: center;
 	align-items: center;
-	height: 70vh;
-	width: 100%;
+	height: 90%;
+	width: 90%;
+
 }
-.OurToppers h2 {
-	top: 192%;
+
+.closesvg{
 	position: absolute;
-	left: 20%;
-}
-.grid3 {
-	position: absolute;
-	left: 40%;
-	width: 40%;
-	height: 89vh;
-	display: grid;
-	grid-template-areas: 'cont1 cont2 cont3 cont4 cont5';
-	align-content: center;
-	justify-content: center;
-}
-
-.item1 {
-	grid-area: cont1;
-}
-.item2 {
-	grid-area: cont2;
-}
-.item3 {
-	grid-area: cont3;
-}
-.item4 {
-	grid-area: cont4;
-}
-.item5 {
-	grid-area: cont5;
-}
-/* .item6 {
-	grid-area: cont6;
-} */
-.grid-item3 {
-	height: 64vh;
-	width: 15vw;
-	font-size: 20px;
-	display: flex;
-	justify-content: space-around;
-	flex-direction: column;
-	align-items: center;
-	box-shadow: 0px 0px 0px 2px;
-	color: #fff;
-}
-
-.subbutton3 {
-	display: flex;
-	position: relative;
-}
-
-.subbutton3 button {
-	width: 145px;
-	padding: 6px 0;
-	border-radius: 25px;
-	text-align: center;
-	font-weight: bold;
-	font-size: 25px;
-	border: 2px solid white;
-	background-color: white;
-	color: #0061ff;
-}
-
-
-
-/* Neet Achievments */
-.NeetAchievements {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 70vh;
-	width: 100%;
-}
-.NeetAchievements h2 {
-	top: 285%;
-	position: absolute;
-	left: 20%;
-}
-.grid4 {
-	position: absolute;
-	left: 40%;
-	top: 270%;
-	width: 40%;
-	height: 72vh;
-	display: grid;
-	grid-template-areas: 'cont1 cont2 cont3 cont4 cont5 cont6 cont7';
-	align-content: center;
-	justify-content: center;
-}
-.item1 {
-	grid-area: cont1;
-}
-.item2 {
-	grid-area: cont2;
-}
-.item3 {
-	grid-area: cont3;
-}
-.item4 {
-	grid-area: cont4;
-}
-.item5 {
-	grid-area: cont5;
-}
-.item6 {
-	grid-area: cont6;
-}
-.grid-item4 {
-	height: 18vh;
-	width: 10vw;
-	font-size: 20px;
-	display: flex;
-	justify-content: space-around;
-	flex-direction: column;
-	align-items: center;
-	box-shadow: 0px 0px 0px 2px;
-	color: #fff;
-}
-.subbutton4 button {
-	width: 145px;
-	padding: 6px 0;
-	border-radius: 25px;
-	text-align: center;
-	font-weight: bold;
-	font-size: 25px;
-	border: 2px solid;
-	background-color: white;
-	color: #0061ff;
-	display: flex;
-	position: absolute;
-	align-items: center;
-	justify-content: center;
-	right: 12%;
-	top: 321%;
-}
-/* Students Testimonial */
-.StudentsTestimonials {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 70vh;
-	width: 100%;
-}
-.StudentsTestimonials h2 {
-	top: 350%;
-	position: absolute;
-	left: 20%;
-}
-.grid5 {
-	position: absolute;
-	left: 40%;
-	top: 360%;
-	width: 40%;
-	height: 72vh;
-	display: grid;
-	grid-template-areas: 'cont1 cont2 cont3 cont4 cont5 cont6';
-	align-content: center;
-	justify-content: center;
-}
-.item1 {
-	grid-area: cont1;
-}
-.item2 {
-	grid-area: cont2;
-}
-.item3 {
-	grid-area: cont3;
-}
-.item4 {
-	grid-area: cont4;
-}
-.item5 {
-	grid-area: cont5;
-}
-.item6 {
-	grid-area: cont6;
-}
-.grid-item5 {
-	height: 18vh;
-	width: 10vw;
-	font-size: 20px;
-	display: flex;
-	justify-content: space-around;
-	flex-direction: column;
-	align-items: center;
-	box-shadow: 0px 0px 0px 2px;
-	color: #fff;
-}
-.subbutton5 button {
-	width: 145px;
-	padding: 6px 0;
-	border-radius: 25px;
-	text-align: center;
-	font-weight: bold;
-	font-size: 25px;
-	border: 2px solid white;
-	background-color: white;
-	color: #0061ff;
-	display: flex;
-	position: absolute;
-	align-items: center;
-	justify-content: center;
-	right: 12%;
-	top: 400%;
-}
-
-.addToppers {
-	width: 100%;
-	height: 100vh;
-	z-index: 5;
-	display: none;
-	position: absolute;
-	align-items: center;
-	justify-content: center;
-	background-color: rgba(0, 0, 0, 0.3);
-	color: white;
-}
-
-.addToppers span {
-	font-size: 3rem;
+	right: 0%;
+	top: 0%;
+	cursor: pointer;
 }
