--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -5,48 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin panel</title>
-    <link rel="stylesheet" href="../../stylesheets/adminheader.css"/>
     <link rel="stylesheet" href="../../stylesheets/admin.css"/>
-    <link rel="stylesheet" href="../../stylesheets/adminSideBar.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div class="preview"></div>
+<div class="preview"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#000" class="bi bi-x-lg closesvg" viewBox="0 0 16 16">
+    <path d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"/>
+  </svg></div>
     <%- include('../../layout/adminheader') %>
-    <%- include('../../layout/adminSidebar') %>
+    <section class="mainsection">
+        <div class="left">
+            <%- include('../../layout/adminSidebar') %>
+        </div>
+        <div class="right">
         <form action="/imgupdate" method="post" class="imgform" enctype="multipart/form-data">
-          <div class="sliderrevolution">
-            <h2>Slider Revolution</h2> 
-            	<div class="grid1">
-                    <div class="grid-item1 item1">
-                        <p>Current Image</p>
-                        <% img.forEach(i => { %>
-                            <p class="onclickimg"><%= i.imgname %></p>
-                            <span class="currentPreviewSpan">Preview</span>
-                            <span class="currentSliderimgurl"><%= i.sliderimg %> </span>
+        <table class="table" style="width: 70%;">
+            <thead>
+              <tr>
+                <th scope="col">Current Image</th>
+                <th scope="col">New Image</th>
+                <th scope="col">Updates</th>
+              </tr>
+            </thead>
+            <tbody>
+                <% img.forEach(i => { %>
+              <tr>
+                <td>
+                    <p class="onclickimg"><%= i.imgname %></p>
+                    <button class="currentPreviewSpan btn btn-info" type="button">Preview</button>
+                    <span class="currentSliderimgurl"><%= i.sliderimg %> </span>
+                </td>
+                <td>
 
-                        <% }) %>
-                       
-                    </div>
-                    <div class="grid-item1 item2">
-                        <p>New Image</p>
-                        <% img.forEach(i => { %>
-                            <input type="file" id="image" accept="image/*" class="fileimg" name="sliderimg" />
-                            <span class="previewSpan">Preview</span>
-                            <span class="sliderimgurl"></span>
-                        <% }) %>
-                    </div>
-                    <div class="grid-item1 item3">
-                        <p>Updates</p> 
-                        <% img.forEach(i => { %>
-                            <input type="checkbox" id="checkbox" class='updatesCheckbox' name="checkbox" value='<%= i.cloudinaryName %>' style="height: 20px; width: 20px;" />
-                        <% }) %>
-                    </div>
-                </div>
-                <div class="subbutton1">
-                    <button type="submit" class="submit">Submit</button>
-                </div>
-            </form>
+                    
+                    <input type="file" id="image" accept="image/*" class="fileimg" name="sliderimg" />
+                    <button class="previewSpan btn btn-info" type="button">Preview</button>
+                    <span class="sliderimgurl"></span>
+                </td>
+                <td>
+                    <input type="checkbox" id="checkbox" class='updatesCheckbox' name="checkbox" value='<%= i.cloudinaryName %>' style="height: 20px; width: 20px;" />
+                </td>
+              </tr>
+              <% }) %>
+            </tbody>
+          </table> 
+          <button type="submit" class="btn btn-outline-primary submit" disabled>Submit</button>
+        </form>
+        </div>
+    </section>
+    
           
     <script src="../../javascripts/adminPanel.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+
+
+                     
+
+                      
+                      
