--- a/views/home.ejs
+++ b/views/home.ejs
@@ -361,11 +361,11 @@
 						<h3>Consecutive years of District first in Salem</h3>
 					</div>
 					<div class="stat3 stat">
-						<h1 class="counter" data-target="90">90%</h1>
+						<h1 class="counter successRate" data-target="90">90%</h1>
 						<h3>Success rate in NEET</h3>
 					</div>
 					<div class="stat4 stat">
-						<h1 class="counter" data-target="15">15</h1>
+						<h1 class="counter admission" data-target="15">15</h1>
 						<h3>NIT & IIST Admissions</h3>
 					</div>
 				</div>
