--- a/views/home.ejs
+++ b/views/home.ejs
@@ -321,16 +321,16 @@
 					<div class="topperContent">
 						<h2 class="name"><%= topper.name %> </h2>
 						<p class="college"><%= topper.collegename %> </p>
-						<div class="markFlex">
+						<!-- <div class="markFlex">
 							<h4 class="score">Neet score</h4>
 							<p class="marks">644/720</p>
-						</div>
+						</div> -->
 					</div>
 				</section>   
 				</div>
 			  <% }) %>
           </div>
-          
+
         </section>
 			<div class="swiper-button-next arrownext1"></div>
           	<div class="swiper-button-prev arrowprev1"></div>
