--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -136,7 +136,7 @@ nav {
 footer {
   position: relative;
   width: 100%;
-  height: 75vh;
+  height: 54vh;
 }
 
 .footer_svg_1,
@@ -149,9 +149,9 @@ footer {
 
 .footer_content {
   position: relative;
-  padding: 2% 4% 0 4%;
-  width: 100%;
-  height: 100%;
+  /* padding: 2% 4% 0 4%; */
+  /* width: 100%;
+  height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -193,10 +193,10 @@ footer {
   justify-content: space-between;
   height: 100%;
 }
-
 .address-container h1 {
   text-align: center;
   text-decoration: underline;
+  font-size: 30px;
 }
 
 .address-container > div {
@@ -229,8 +229,9 @@ footer {
   font-size: 1.3rem;
   font-weight: 600;
   position: relative;
-  margin-bottom: 2rem;
-  padding: 2rem 0 0 0;
+  position: relative;
+  
+  padding: 0rem 0 0 0;
 }
 
 /* swiper  */
