--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -21,6 +21,7 @@
                 <span>
                     <li class=""><a href="">Slider Revolution</a></li>
                     <li class=""><a href="">Latest Updates</a></li>
+                    <li class=""><a href="">Calendar Events</a></li>
                     <li class=""><a href="">Our Toppers</a></li>
                     <li class=""><a href="">Neet Achievements</a></li>
                     <li class=""><a href="">Students Testimonials</a></li>
