--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -8,6 +8,7 @@
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
             <li><a href="#" class="link-dark rounded">Slider Revolution</a></li>
             <li><a href="#" class="link-dark rounded">Latest Updates</a></li>
+            <li><a href="#" class="link-dark rounded">Calendar Events</a></li>
             <li><a href="#" class="link-dark rounded">Our Toppers</a></li>
             <li><a href="#" class="link-dark rounded">Neet Achievements</a></li>
             <li><a href="#" class="link-dark rounded">Students Testimonials</a></li>
