--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -4,6 +4,7 @@
 	box-sizing: border-box;
 }
 
+/* Slider Revolution */
 .mainsection{
 	height: 90vh;
 	width: 100%;
@@ -18,7 +19,6 @@
 	position: relative;
 	height: 90%;
 	width: 90%;
-	
 }
 
 .table{
@@ -46,6 +46,7 @@
 .sliderimgurl{
 	opacity: 0;
 	position: absolute;
+	overflow: hidden;
 	height: 0%;
 	width: 0%;
 }
@@ -59,7 +60,6 @@
 	transform: translate(-50%,-41%);
 	display: none;
 	z-index: 5;
-
 }
 
 .preview img{
@@ -75,4 +75,15 @@
 	right: 0%;
 	top: 0%;
 	cursor: pointer;
+}
+
+/* Latest Updates */
+
+.addbtn{
+
+}
+
+.buttondiv{
+	display: flex;
+
 }
