--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -18,7 +18,7 @@
             <%- include('../../layout/adminSidebar') %>
         </div>
         <div class="right">
-        <form action="/imgupdate" method="post" class="imgform" enctype="multipart/form-data">
+        <form action="/admin/sliderrevolution" method="post" class="imgform" enctype="multipart/form-data">
         <table class="table" style="width: 70%;">
             <thead>
               <tr>
@@ -32,14 +32,14 @@
               <tr>
                 <td>
                     <p class="onclickimg"><%= i.imgname %></p>
-                    <button class="currentPreviewSpan btn btn-info" type="button">Preview</button>
+                    <span class="currentPreviewSpan btn btn-info" >Preview</span>
                     <span class="currentSliderimgurl"><%= i.sliderimg %> </span>
                 </td>
                 <td>
 
                     
                     <input type="file" id="image" accept="image/*" class="fileimg" name="sliderimg" />
-                    <button class="previewSpan btn btn-info" type="button">Preview</button>
+                    <span class="previewSpan btn btn-info" >Preview</span>
                     <span class="sliderimgurl"></span>
                 </td>
                 <td>
@@ -55,7 +55,7 @@
     </section>
     
           
-    <script src="../../javascripts/adminPanel.js"></script>
+    <script src="../../javascripts/admin/home/sliderRevolution.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
