--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1346,6 +1346,7 @@ p {
 	height: 80vh;
 	border-radius: 20px;
 	box-shadow: 5px 5px 100px rgba(0, 0, 0, 0.3);
+	position: relative;
 }
 
 .markFlex {
@@ -1356,7 +1357,8 @@ p {
 .sec-2 {
 	/* background-color: blanchedalmond; */
 	position: relative;
-	min-height: 86vh;
+	height: 86vh;
+	min-height: 500px;
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
@@ -1402,6 +1404,18 @@ iframe {
 		right: 16%;
 		top: 64%;
 	}
+	.box1,
+	.box2,
+	.box3 {
+	height: 21rem;
+	width: 18rem;
+	
+	}
+	.cardsDiv {
+		
+		margin: 2.5rem 0rem;
+		
+	}
 }
 
 
@@ -1442,6 +1456,16 @@ iframe {
 	.CalanderEvents {
 		font-size: 20px;
 	}
+	.sec-2 {
+		/* background-color: blanchedalmond; */
+	
+		height: 75vh;
+	
+	}
+	.cardsDiv {
+		height: 45vh;
+		margin: 0rem 0rem;
+	}
 }
 
 @media (max-width:1100px) {
@@ -1460,6 +1484,13 @@ iframe {
 		transform: scale(.8);
 		right: 14%;
 		top: 64%;
+	}
+	.box1,
+	.box2,
+	.box3 {
+	height: 18rem;
+	width: 15rem;
+	
 	}
 }
 @media (max-width:1100px) {
@@ -1498,11 +1529,70 @@ iframe {
 		position: relative;
 		/* min-height: 70vh; */
 		display: flex;
-		flex-direction: column;
+		/* flex-direction: column; */
 		align-items: center;
 		justify-content: space-evenly;
 	}
 	.sliderRev {
 		height: 70vh;
+	}	
+	.news-box {
+		height: 25rem;
+		width: 20rem;
+	}
+	.calenderCard {
+		width: 20rem;
+	}
+	.date {
+		padding: .25rem;
+	}
+	.box1,
+	.box2,
+	.box3 {
+	height: 15rem;
+	width: 12rem;
+	
+	}
+	.cardsDiv {
+		position: relative;
+		display: flex;
+		margin: 0rem 0rem;
+		justify-content: space-evenly;
+		align-items: center;
+		height: 35vh;
+		width: 100%;
+	}
+
+}
+@media (max-width:800px) {
+	.sec-2 {
+		display: flex;
+		flex-direction: column;
+		min-height: 1000px;
+	}
+	.news-box {
+		height: 25rem;
+		width: 30rem;
+	}
+	.calenderCard {
+		width: 30rem;
+	}
+	.date {
+		padding: .25rem;
+	}
+
+
+}
+@media (max-width:700px) {
+	.cardsDiv {
+		flex-direction: column;
+		height: 200vh;
+	}
+	.box1,
+	.box2,
+	.box3 {
+	height: 25rem;
+	width: 22rem;
+	
 	}
 }
