--- a/views/home.ejs
+++ b/views/home.ejs
@@ -321,10 +321,10 @@
 					<div class="topperContent">
 						<h2 class="name"><%= topper.name %> </h2>
 						<p class="college"><%= topper.collegename %> </p>
-						<div class="markFlex">
+						<!-- <div class="markFlex">
 							<h4 class="score">Neet score</h4>
 							<p class="marks">644/720</p>
-						</div>
+						</div> -->
 					</div>
 				</section>   
 				</div>
@@ -339,66 +339,24 @@
 			<section class="stats">
 				<div class="stats-details">
 					<div class="stat1 stat">
-						<h1 class="counter MBBS_Seats" data-target="345">345</h1>
+						<h1 class="counter MBBS_Seats" data-target=345>345</h1>
 						<h3>MBBS Seats through Neet</h3>
 					</div>
 					<div class="stat2 stat">
-						<h1 class="counter Consecutive" data-target="4">4</h1>
+						<h1 class="counter Consecutive" data-target=4>4</h1>
 						<h3>Consecutive years of District first in Salem</h3>
 					</div>
 					<div class="stat3 stat">
-						<h1 class="counter successRate" data-target="90">90%</h1>
+						<h1 class="counter successRate" data-target=90>90%</h1>
 						<h3>Success rate in NEET</h3>
 					</div>
 					<div class="stat4 stat">
-						<h1 class="counter admission" data-target="15">15</h1>
+						<h1 class="counter admission" data-target=15>15</h1>
 						<h3>NIT & IIST Admissions</h3>
 					</div>
 				</div>
 			</section>
-			<!-- <section class="studentstestimonials">
-		<h1 class="studentsh1">STUDENTS TESTIMONIALS</h1>
-		<div class="testimonialsbox">
-			<a class="aprev">&#10094;</a>
-			<div class="testimonials">
-				<span>
-					<div class="imghead">
-						<img src="images/home/img4.jpeg" alt="" />
-						<p><b>Maya, Neet student</b></p>
-					</div>
-					<p class="pbody">
-						Lorem ipsum dolor sit amet, consectetur amet adipiscing elit. Praesent
-						in maximus nunc, nec ullamcorper justo.
-					</p>
-				</span>
-			</div>
-			<div class="testimonials">
-				<span>
-					<div class="imghead">
-						<img src="images/home/img4.jpeg" alt="" />
-						<p><b>Maya, Neet student</b></p>
-					</div>
-					<p class="pbody">
-						Lorem ipsum dolor sit amet, consectetur amet adipiscing elit. Praesent
-						in maximus nunc, nec ullamcorper justo.
-					</p>
-				</span>
-			</div>
-			<div class="testimonials">
-				<span>
-					<div class="imghead">
-						<img src="images/home/img4.jpeg" alt="" />
-						<p><b> David, IIT student</b></p>
-					</div>
-					<p class="pbody">
-						Lorem ipsum dolor sit amet, consectetur amet adipiscing elit. Praesent
-						in maximus nunc, nec ullamcorper justo.
-					</p>
-				</span>
-			</div>
-			<a class="anext">&#10095;</a>
-		</div>
-	</section> -->
+
 			<!-- Swiper -->
 			<section class="testimonials_container">
 				<div class="swiper swiper2 mySwiper2">
@@ -427,6 +385,8 @@
 
 			<%- include('./layout/footer') %>
 		</div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollTrigger/1.0.5/ScrollTrigger.min.js" integrity="sha512-m/n857VfrPYUcRvzCfqfrC9aMT06TQA2V0DcX/Ovovrhswa3038FfYmHlB0l/ZMukVyKWmiwZI4Pnnd7v3FwFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
