--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -43,7 +43,7 @@
                     <span class="sliderimgurl"></span>
                 </td>
                 <td>
-                    <input type="checkbox" id="checkbox" class='updatesCheckbox' name="checkbox" value='<%= i.cloudinaryName %>' style="height: 20px; width: 20px;" />
+                    <input type="checkbox" id="checkbox" class='updatesCheckbox' disabled name="checkbox" value='<%= i.cloudinaryName %>' style="height: 20px; width: 20px;" />
                 </td>
               </tr>
               <% }) %>
