--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -6,12 +6,12 @@
         </button>
         <div class="collapse show" id="home-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 ms-4 d-flex flex-column justify-content-center fs-6 mt-2 ms-4 small">
-            <li><a href="#" class="link-dark rounded">Slider Revolution</a></li>
-            <li><a href="#" class="link-dark rounded">Latest Updates</a></li>
-            <li><a href="#" class="link-dark rounded">Calendar Events</a></li>
-            <li><a href="#" class="link-dark rounded">Our Toppers</a></li>
-            <li><a href="#" class="link-dark rounded">Neet Achievements</a></li>
-            <li><a href="#" class="link-dark rounded">Students Testimonials</a></li>
+            <li><a href="/admin/sliderrevolution" class="link-dark rounded">Slider Revolution</a></li>
+            <li><a href="/admin/latestupdates" class="link-dark rounded">Latest Updates</a></li>
+            <li><a href="/admin/Calendarevents" class="link-dark rounded">Calendar Events</a></li>
+            <li><a href="/admin/ourtoppers" class="link-dark rounded">Our Toppers</a></li>
+            <li><a href="/admin/neetachivements" class="link-dark rounded">Neet Achievements</a></li>
+            <li><a href="/admin/studenttestimonials" class="link-dark rounded">Students Testimonials</a></li>
           </ul>
         </div>
       </li>
