--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -1,100 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Admin</title>
-		<link rel="stylesheet" href="../../stylesheets/adminheader.css" />
-		<link rel="stylesheet" href="../../stylesheets/admin.css" />
-		<link rel="stylesheet" href="../../stylesheets/adminSideBar.css" />
-	</head>
-	<body>
-		<%- include('../../layout/adminheader') %>
-		<%-include('../../layout/adminSidebar') %>
-		<div class="preview"></div>
-		<form
-			action="/admin/ourtoppers"
-			class="addToppers"
-			method="post"
-			enctype="multipart/form-data"
-		>
-			<span>x</span>
-			<div>
-				<label for="name">name</label>
-				<input type="text" name="name" id="name" />
-			</div>
-			<div>
-				<label for="collegeName">College Name</label>
-				<input type="text" name="collegeName" id="collegeName" />
-			</div>
-			<div>
-				<label for="Image">Image</label>
-				<input
-					type="file"
-					name="sliderimg"
-					id="Image"
-					accept="image/*"
-					required
-				/>
-			</div>
-			<button>Submit</button>
-		</form>
-		<div class="OurToppers">
-			<h2>OurToppers</h2>
-			<form
-				action="/admin/ourtoppers?_method=PUT"
-				method="post"
-				enctype="multipart/form-data"
-			>
-				<div class="grid3">
-					<div class="grid-item3 item1">
-						<p>Name</p>
-						<% students.forEach(student => { %>
-						<p><%= student.name %></p>
-						<% }) %>
-					</div>
-					<div class="grid-item3 item3">
-						<p>Collage Name</p>
-						<% students.forEach(student => { %>
-						<p><%= student.collegename %></p>
-						<% }) %>
-					</div>
-					<div class="grid-item3 item4">
-						<p>Current Image</p>
-						<% students.forEach(student => { %>
-						<p class="currentPreviewSpan">Preview</p>
-						<span class="currentSliderimgurl"><%= student.studentimg %></span>
-						<% }) %>
-					</div>
-					<div class="grid-item3 item5">
-						<p>New Image</p>
-						<% students.forEach(student => { %>
-						<input
-							type="file"
-							id="image"
-							name="sliderimg"
-							class="fileimg"
-							required
-						/>
-						<input
-							type="checkbox"
-							name="cloudinaryname"
-							id="cloudinaryname"
-							value="<%=student.cloudinaryname%>"
-							checked
-						/>
-						<span class="previewSpan">Preview</span>
-						<span class="sliderimgurl"></span>
-						<% }) %>
-					</div>
-				</div>
-				<div class="subbutton3">
-					<button type="button" class="addButton">Add</button>
-					<button type="submit" class="submit">Submit</button>
-				</div>
-			</form>
-		</div>
-		<script src="../../javascripts/adminPanel.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin panel</title>
+    <link rel="stylesheet" href="../../stylesheets/admin.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="preview">
+      <form
+        action="/admin/latestupdates"
+        method="post"
+        class="d-flex justify-content-center align-items-center flex-column"
+      >
+        <div class="input-group flex-nowrap" style="width: 70%">
+          <span class="input-group-text" id="addon-wrapping">Add News</span>
+          <input
+            type="text"
+            name="uploadlink"
+            class="form-control"
+            aria-label="Username"
+            aria-describedby="addon-wrapping"
+            id="uploadlink"
+          />
+        </div>
+        <button type="submit" class="btn btn-primary mt-5">submit</button>
+      </form>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="25"
+        height="25"
+        fill="#000"
+        class="bi bi-x-lg closesvg"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
+        />
+      </svg>
+    </div>
+    <%- include('../../layout/adminheader') %>
+    <section class="mainsection">
+      <div class="left"><%- include('../../layout/adminSidebar') %></div>
+      <div class="right">
+        <form
+          action="/admin/latestupdates?_method=DELETE"
+          method="post"
+          class="imgform"
+        >
+          <table class="table" style="width: 70%">
+            <thead>
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">CollegeName</th>
+                <th scope="col">studentimg</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% students.forEach(i => { %>
+              <tr>
+                <%= console.log(i); %>
+
+                <td>
+                  <p><%= i.name %></p>
+                </td>
+                <td>
+                  <p><%= i.collegename %></p>
+                </td>
+
+                <td>
+                  <p class="onclickimg"><%= i.studentimg %></p>
+                  <span class="currentPreviewSpan btn btn-info">Preview</span>
+                  <span class="currentSliderimgurl"><%= i.sliderimg %> </span>
+                </td>
+              </tr>
+              <% }) %>
+            </tbody>
+          </table>
+          <div class="buttondiv">
+            <button type="button" class="btn btn-outline-primary addbtn px-4">
+              Add
+            </button>
+            <button
+              type="submit"
+              class="btn btn-outline-danger submit ms-5 px-3"
+            >
+              Delete
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <script src="../../javascripts/admin/home/LatestUpdates.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
