--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -1,16 +1,11 @@
 <!-- Header session -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid justify-content-space-between">
-      <a class="navbar-brand" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-      </svg>Menu</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand" href="#"><img src="images/home/classic-nee-tacademy-logo.png" alt="logo"></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto ms">
           <li class="nav-item">
-            <a class="nav-link active d-flex justify-content-center"" aria-current="page" href="#">Classic Neet Academy Admin Dashboard</a>
+            <a class="nav-link active d-flex justify-content-center"" aria-current="page" href="#"><b>Classic Neet Academy Admin Dashboard</b> </a>
           </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
