--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -14,42 +14,35 @@
     />
   </head>
   <body>
-    <div class="preview">
-      <form
-        action="/admin/latestupdates"
-        method="post"
-        class="d-flex justify-content-center align-items-center flex-column"
-      >
-        <div class="input-group flex-nowrap" style="width: 70%">
-          <span class="input-group-text" id="addon-wrapping">Add News</span>
-          <input
-            type="text"
-            name="uploadlink"
-            class="form-control"
-            aria-label="Username"
-            aria-describedby="addon-wrapping"
-            id="uploadlink"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary mt-5">submit</button>
-      </form>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="25"
-        height="25"
-        fill="#000"
-        class="bi bi-x-lg closesvg"
-        viewBox="0 0 16 16"
-      >
-        <path
-          d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
-        />
-      </svg>
-    </div>
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSidebar') %></div>
       <div class="right">
+        <div class="preview">
+          <h1 class="mb-5">Latest Updates</h1>
+          <form
+            action="/admin/latestupdates"
+            method="post"
+            class="d-flex justify-content-center align-items-center flex-column"
+            style="width: 100%;"
+          >
+            <div class="input-group flex-nowrap" style="width: 80%">
+              <span class="input-group-text" id="addon-wrapping">Add News</span>
+              <input
+                type="text"
+                name="uploadlink"
+                class="form-control"
+                aria-label="Username"
+                aria-describedby="addon-wrapping"
+                id="uploadlink"
+              />
+            </div>
+            <div>
+            <button type="button" class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn">Back</button>
+            <button type="submit" class="btn btn-outline-primary mt-5">submit</button>
+            </div>
+          </form>
+        </div>
         <form
           action="/admin/latestupdates?_method=DELETE"
           method="post"
@@ -73,17 +66,19 @@
                     id="linkinput"
                     value="<%= i %>"
                     readonly
-                    style="width: 80%"
+                    style="width: 80%; border: none;"
+
                   />
                 </td>
                 <td>
                   <input
                     type="checkbox"
                     id="checkbox"
-                    class="updatesCheckbox"
+                    class="updatesCheckbox "
                     name="checkbox"
                     value="<%= i %>"
-                    style="height: 20px; width: 20px"
+                    style="height: 20px; width: 20px; "
+                    
                   />
                 </td>
               </tr>
