--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin panel</title>
+    <link rel="stylesheet" href="alert/dist/sweetalert.css">
     <link rel="stylesheet" href="../../stylesheets/admin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -86,12 +87,13 @@
             </tbody>
           </table>
           <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4">
+            <button type="button" class="btn btn-outline-primary addbtn px-4" >
               Add
             </button>
             <button
-              type="submit"
-              class="btn btn-outline-danger submit ms-5 px-3"
+              type="button"
+              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+              
             >
               Delete
             </button>
@@ -99,6 +101,7 @@
         </form>
       </div>
     </section>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../../javascripts/admin/home/LatestUpdates.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
