--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -50,49 +50,81 @@
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSidebar') %></div>
       <div class="right">
+        <div class="preview">
+          <h1 class="mb-5">Our Toppers</h1>
+          <form
+            action="/admin/ourtoppers"
+            method="post"
+            class="d-flex justify-content-center align-items-center flex-column"
+            style="width: 100%;"
+          >
+            <div class="input-group flex-nowrap" style="width: 80%">
+              <span class="input-group-text" id="addon-wrapping">Add Name</span>
+              <input
+                type="text"
+                name="uploadlink"
+                class="form-control"
+                aria-label="Username"
+                aria-describedby="addon-wrapping"
+                id="uploadlink"
+              />
+            </div>
+            <div>
+            <button type="button" class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn">Back</button>
+            <button type="submit" class="btn btn-outline-primary mt-5">submit</button>
+            </div>
+          </form>
+        </div>
         <form
           action="/admin/latestupdates?_method=DELETE"
           method="post"
           class="imgform"
         >
-          <h1 class="m-5">Slider Revolution</h1>
+          <h1 class="m-5">Latest Updates</h1>
 
           <table class="table" style="width: 70%">
             <thead>
               <tr>
-                <th scope="col">Name</th>
-                <th scope="col">CollegeName</th>
-                <th scope="col">studentimg</th>
+                <th scope="col">Current Link</th>
+                <th scope="col">Updates</th>
               </tr>
             </thead>
             <tbody>
-              <% students.forEach(i => { %>
+              <% link.forEach(i => { %>
               <tr>
-                <%= console.log(i); %>
-
                 <td>
-                  <p><%= i.name %></p>
+                  <input
+                    type="text"
+                    id="linkinput"
+                    value="<%= i %>"
+                    readonly
+                    style="width: 80%; border: none;"
+
+                  />
                 </td>
                 <td>
-                  <p><%= i.collegename %></p>
-                </td>
-
-                <td>
-                  <p class="onclickimg"><%= i.studentimg %></p>
-                  <span class="currentPreviewSpan btn btn-info">Preview</span>
-                  <span class="currentSliderimgurl"><%= i.sliderimg %> </span>
+                  <input
+                    type="checkbox"
+                    id="checkbox"
+                    class="updatesCheckbox "
+                    name="checkbox"
+                    value="<%= i %>"
+                    style="height: 20px; width: 20px; "
+                    
+                  />
                 </td>
               </tr>
               <% }) %>
             </tbody>
           </table>
           <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4">
+            <button type="button" class="btn btn-outline-primary addbtn px-4" >
               Add
             </button>
             <button
-              type="submit"
-              class="btn btn-outline-danger submit ms-5 px-3"
+              type="button"
+              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+              
             >
               Delete
             </button>
@@ -100,7 +132,7 @@
         </form>
       </div>
     </section>
-    <script src="../../javascripts/admin/home/LatestUpdates.js"></script>
+    <script src="../../javascripts/admin/home/sliderRevolution.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
