--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -119,6 +119,7 @@ nav {
     width: 50%;
     transform: translatex(100%);
     transition: transform 0.5s ease-in;
+    display: none;
   }
   .navlinks li {
     opacity: 0;
@@ -136,7 +137,7 @@ nav {
 footer {
   position: relative;
   width: 100%;
-  height: 54vh;
+  height: fit-content;
 }
 
 .footer_svg_1,
@@ -271,3 +272,38 @@ footer {
 }
 
  
+
+
+@media (max-width:1250px) {
+  .address-container h1 {
+    
+    font-size:25px;
+}
+.address {
+  font-size: 1rem;
+}
+
+}
+
+@media (max-width:1000px) {
+ 
+.address {
+  font-size: .8rem;
+}
+.address-container span {
+  font-size: .8rem;
+  font-weight: 500;
+}
+}
+
+
+@media (max-width:800px) {
+ 
+  .address {
+    font-size: .5rem;
+  }
+  .address-container span {
+    font-size: .8rem;
+    font-weight: 500;
+  }
+  }
