--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -10,7 +10,7 @@
             <li><a href="/admin/latestupdates" class="link-dark rounded ahover">Latest Updates</a></li>
             <li><a href="/admin/Calendarevents" class="link-dark rounded ahover">Calendar Events</a></li>
             <li><a href="/admin/ourtoppers" class="link-dark rounded ahover">Our Toppers</a></li>
-            <li><a href="/admin/neetachivements" class="link-dark rounded ahover">Neet Achievements</a></li>
+            <li><a href="/admin/neetachievements" class="link-dark rounded ahover">Neet Achievements</a></li>
             <li><a href="/admin/studenttestimonials" class="link-dark rounded ahover">Students Testimonials</a></li>
           </ul>
         </div>
