--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -1,7 +1,7 @@
 <!-- Header session -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid justify-content-space-between">
-      <a class="navbar-brand" href="#"><img src="images/home/classic-nee-tacademy-logo.png" alt="logo"></a>
+      <a class="navbar-brand" href="#"><img style="width: 60px; height: 50px;" src="../../images/home/classic-nee-tacademy-logo.png" alt="logo"></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto ms">
           <li class="nav-item">
