--- a/views/admin/home/neetAchievements.ejs
+++ b/views/admin/home/neetAchievements.ejs
@@ -1,48 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Admin</title>
-		<link rel="stylesheet" href="../../stylesheets/adminheader.css" />
-		<link rel="stylesheet" href="../../stylesheets/admin.css" />
-		<link rel="stylesheet" href="../../stylesheets/adminSideBar.css" />
-	</head>
-	<body>
-		<%- include('../../layout/adminheader') %>
-		<%-include('../../layout/adminSidebar') %>
-		<div class="NeetAchievements">
-			<h2>Neet Achievements</h2>
-			<div class="grid4">
-				<div class="grid-item4 item1">
-					<p>Current Image</p>
-				</div>
-				<div class="grid-item4 item2">
-					<p>New Image</p>
-				</div>
-				<div class="grid-item4 item3">
-					<p>MBBS Seat</p>
-				</div>
-				<div class="grid-item4 item4">
-					<p>Consecutive Years</p>
-				</div>
-				<div class="grid-item4 item5">
-					<p>Success rate</p>
-				</div>
-				<div class="grid-item4 item6">
-					<p>No. of Admission</p>
-				</div>
-				<div class="grid-item4 item7">
-					<p>Update</p>
-				</div>
-			</div>
-			<div class="subbutton4">
-				<button type="button">Submit</button>
-			</div>
-		</div>
-		
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin</title>
+    <link rel="stylesheet" href="../../stylesheets/admin.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <%- include('../../layout/adminheader') %>
+    <section class="mainsection">
+      <div class="left"><%- include('../../layout/adminSidebar') %></div>
+      <div class="right">
+        <div class="preview">
+          <h1 class="mb-5">Neet Achievements</h1>
+          <form
+            action="/admin/neetachievements"
+            method="post"
+            class="d-flex justify-content-center align-items-center flex-column"
+            style="width: 100%"
+          >
+            <div class="input-group flex-nowrap mt-3" style="width: 80%">
+              <span class="input-group-text" id="addon-wrapping">Add Seats</span>
+              <input
+                type="text"
+                name="seat"
+                class="form-control"
+                aria-label="Username"
+                aria-describedby="addon-wrapping"
+                id="uploadlink"
+                value="<%= seats %> "
 
-		<script src="../../javascripts/adminPanel.js"></script>
-	</body>
+              />
+            </div>
+            <div class="input-group flex-nowrap mt-3" style="width: 80%">
+              <span class="input-group-text" id="addon-wrapping">Add Consecutive years</span>
+              <input
+                type="text"
+                name="years"
+                class="form-control"
+                aria-label="Username"
+                aria-describedby="addon-wrapping"
+                id="uploadlink"
+                value="<%= consecutiveyears %> "
+
+              />
+            </div>
+            <div class="input-group flex-nowrap mt-3" style="width: 80%">
+              <span class="input-group-text" id="addon-wrapping">Add Successrate</span>
+              <input
+                type="text"
+                name="rate"
+                class="form-control"
+                aria-label="Username"
+                aria-describedby="addon-wrapping"
+                id="uploadlink"
+                value="<%= successrate %> "
+              />
+            </div>
+            <div class="input-group flex-nowrap mt-3" style="width: 80%">
+              <span class="input-group-text" id="addon-wrapping">Add Admissions</span>
+              <input
+                type="text"
+                name="admiss"
+                class="form-control"
+                aria-label="Username"
+                aria-describedby="addon-wrapping"
+                id="uploadlink"
+                value="<%= admissions %> "
+
+              />
+            </div>
+            <div>
+              <button
+                type="button"
+                class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+              >
+                Back
+              </button>
+              <button type="submit" class="btn btn-outline-primary mt-5">
+                Submit
+              </button>
+            </div>
+          </form>
+        </div>
+        <form
+          action="/admin/neetachievements?_method=DELETE"
+          method="post"
+          class="imgform"
+        >
+          <h1 class="m-5">Neet Achievements</h1>
+
+          <table class="table" style="width: 70%">
+            <thead>
+              <tr>
+                <th scope="col">Seats</th>
+                <th scope="col">Consecutiveyears</th>
+                <th scope="col">Successrate</th>
+                <th scope="col">Admissions</th>
+                <th scope="col">Updates</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%# nums.forEach(i => { %>
+              <tr>
+                <td>
+                  <input
+                    type="text"
+                    id="linkinput"
+                    value="<%# i %>"
+                    readonly
+                    style="width: 80%; border: none"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="checkbox"
+                    id="checkbox"
+                    class="updatesCheckbox"
+                    name="checkbox"
+                    value="<%# i %>"
+                    style="height: 20px; width: 20px"
+                  />
+                </td>
+              </tr>
+              <%# }) %>
+            </tbody>
+          </table>
+          <div class="buttondiv">
+            <button type="button" class="btn btn-outline-primary addbtn px-4">
+              Add
+            </button>
+            <button
+              type="button"
+              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+            >
+              Delete
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="../../javascripts/admin/home/neetachievements.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
