--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -62,8 +62,14 @@
  <!-- leaders -->
  
  <section class="leaders">
-    <h2>Our Leaders</h2>
-     <span><img src="image/aboutus/leader.jpg" alt="Leader"/></span>
+    <h2>Our Leader</h2>
+     <span><img src="images/aboutus/leader.jpg" alt="Leader"/></span>
+ </section>
+ <section class="app">
+   <div class="apppage">
+     <h2>Get Our Learning<br>App</h2>
+     <img src="images/aboutus/download.jpg">
+   </div>
  </section>
  <%- include('./layout/footer') %>
 </body>
