--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -45,7 +45,7 @@
       </p>
     
  
-      <img src="images/courses/Rectangle 55.png" alt="/">
+      <img src="../public/images/courses/Rectangle 55.png" alt="/">
     
     </span>
   </section>
