--- a/public/stylesheets/coursesNEET.css
+++ b/public/stylesheets/coursesNEET.css
@@ -2,7 +2,7 @@
 .coursesneet{
     width: 100%;
     height: 90vh;
-    background: url('images/courses/neet.jpg');
+    background: url('../images/courses/neet.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
