--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -31,7 +31,7 @@
       </p> 
     
  
-      <img src="images/courses/Rectangle 55.png" alt="/">
+      <img src="../public/images/courses/Rectangle 55.png" alt="/">
     
     </span>
   </section>
