--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -42,7 +42,7 @@
       </p>
     
  
-      <img src="images/courses/rectangle 55.png" alt="/">
+      <img src="../public/images/courses/Rectangle 55.png" alt="/">
     
     </span>
   </section>
